[package]
name = "vspk"
version = "4.0.5"
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
description = "Client for Nuage Network's VSD REST API"
documentation = ""
homepage = "https://github.com/nuagenetworks/vspk-rust"
repository = "https://github.com/nuagenetworks/vspk-rust"
readme = "README.md"
keywords = ["rest"]
license-file = "LICENSE"

[dependencies]
hyper = "*"
serde = "0.8"
serde_json = "0.8"
serde_derive = "0.8"
bambou = { path = "/home/corentih/rust/bambou-rs" }
